--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "libarchive"
 version = "0.1.0"
-authors = ["Jamie Winsor <jamie@vialstudios.com>"]
-license = "MIT"
-repository = "https://github.com/reset/libarchive-rust"
+authors = ["Jamie Winsor <reset@chef.io>"]
+license = "Apache-2.0"
+repository = "https://github.com/chef/libarchive-rust"
+description = "A safe Rust API for authoring and extracting archives with libarchive"
+keywords = ["libarchive", "archive", "tar", "zip"]
 
 [dependencies]
 libc = ">= 0.2.0"
-
-[dependencies.libarchive3-sys]
-git = "https://github.com/reset/libarchive3-sys"
-branch = "master"
+libarchive3-sys = "0.1"
